--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<table bgcolor="#F4F5F7"
 			width="100%" class="tableBorder">
 			<tr>
-				<td class = "label" bgcolor="#0066FF"><center><b>Dr. Mohan's Portfolio</b></center><br/>
+				<td class = "label" bgcolor="#0066FF"><center><b>Yordanos's Portfolio</b></center><br/>
 				<a href = "index.html" class = "label"><b>Biography</b></a> &nbsp;&nbsp;
 				<a href = "education.html" class = "label"><b>Education</b></a> &nbsp;&nbsp;
 				<a href = "work.html" class = "label"><b>Work</b></a>&nbsp;&nbsp;
@@ -44,15 +44,15 @@
 						</tr>
 						<tr>
 							<td valign = "top">
-								<img src="images/pic.png" alt="Mohan" width="220" height="220">
+								<img src="images/pic.jpg" alt="Mohan" width="220">
 								<br/><br/>
 								<br/><br/>
 							</td>
 							<td valign = "top">
 								<p style="text-align:justify;">
-								Dr. Aravind Mohan is an Assistant Professor in the Department of Computer Science at McMurry University in Texas. Previously, Dr. Mohan was a faculty at Allegheny College in Pennsylvania. He completed his Ph.D. in Computer Engineering at Wayne State University in 2017 in the Big Data Research Lab led by Dr. Shiyong Lu. Before that, he worked in the industry as a software engineer.</p>
+								Yordanos Ayelework is a senior student at McMurry University.</p>
 								<p style="text-align:justify;">
-								His research focuses on big data management and cloud computing. His broader areas of interest are services computing, online education services, and information retrieval. He has published several research articles in peer-reviewed international conferences, including the IEEE conference on services computing, big data congress, big data, big data computing services and applications, and the ACM SIGIR conference. He is a member of IEEE and ACM.
+								
 								<br/><br/>
 								<br/><br/>
 								</p>
