--- a/education.html
+++ b/education.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Dr. Mohan Portfolio</title>
+<title>Yordanos Ayelework's Education</title>
 <style>
 .label {
 	font-family: Verdana, Arial, Helvetica, sans-serif;
@@ -9,7 +9,7 @@
 }
 
 .tableBorder {
-	border: solid 1px #0066FF;
+	border: solid 1px blue;
 	margin-top: 20px;
 }
 
@@ -26,11 +26,11 @@
 		<table bgcolor="#F4F5F7"
 			width="100%" class="tableBorder">
 			<tr>
-				<td class = "label" bgcolor="#0066FF"><center><b>Dr. Mohan's Portfolio</b></center><br/>
+				<td class = "label" bgcolor="blue"><center><b>Yordanos Ayelework's Portfolio</b></center><br/>
 				<a href = "index.html" class = "label"><b>Biography</b></a> &nbsp;&nbsp;
 				<a href = "education.html" class = "label"><b>Education</b></a> &nbsp;&nbsp;
 				<a href = "work.html" class = "label"><b>Work</b></a>&nbsp;&nbsp;
-				<a href = "hobbies.html" class = "label"><b>Hobbies</b></a>&nbsp;&nbsp;
+				<a href = "experience.html" class = "label"><b>Experience</b></a>&nbsp;&nbsp;
 				<a href = "contact.html" class = "label"><b>Contact</b></a>&nbsp;&nbsp;
 				</td>
 			</tr>
@@ -44,7 +44,7 @@
 						</tr>
 						<tr>
 							<td valign = "top">
-								<img src="images/mcm.jpeg" alt="Mohan" width="280">
+								<img src="images/mcm.jpg" alt="McMurry University" width="280">
 							</td>
 							<td valign = "top">
 								<p style="text-align:justify;">
@@ -64,6 +64,23 @@
 							</td>
 						</tr>
 						<tr>
+						<tr>
+							<td valign = "top">
+								<img src="images/aau.png" alt="Addis Ababa University" height="230">
+							</td>
+							<td valign = "top">
+								<p style="text-align:justify;">
+				Addis Ababa University.<br/>
+								</p>
+								<p style="text-align:justify;">
+								Degree: Bachelors of Science 
+								<br/>
+								Major: Information Science 
+								<br/>
+								GPA: 3.6/4.0
+								</p>
+							</td>
+						</tr>
 							<td valign = "top">
 								
 							</td>
