--- a/hobbies.html
+++ b/hobbies.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Dr. Mohan Portfolio</title>
+<title>Yordanos Ayelework's Experience</title>
 <style>
 .label {
 	font-family: Verdana, Arial, Helvetica, sans-serif;
@@ -9,7 +9,7 @@
 }
 
 .tableBorder {
-	border: solid 1px #0066FF;
+	border: solid 1px #f4b3b3;
 	margin-top: 20px;
 }
 
@@ -26,11 +26,11 @@
 		<table bgcolor="#F4F5F7"
 			width="100%" class="tableBorder">
 			<tr>
-				<td class = "label" bgcolor="#0066FF"><center><b>Dr. Mohan's Portfolio</b></center><br/>
+				<td class = "label" bgcolor="#f4b3b3"><center><b>Yordanos Ayelework's Portfolio</b></center><br/>
 				<a href = "index.html" class = "label"><b>Biography</b></a> &nbsp;&nbsp;
 				<a href = "education.html" class = "label"><b>Education</b></a> &nbsp;&nbsp;
 				<a href = "work.html" class = "label"><b>Work</b></a>&nbsp;&nbsp;
-				<a href = "hobbies.html" class = "label"><b>Hobbies</b></a>&nbsp;&nbsp;
+				<a href = "experience.html" class = "label"><b>Experience</b></a>&nbsp;&nbsp;
 				<a href = "contact.html" class = "label"><b>Contact</b></a>&nbsp;&nbsp;
 				</td>
 			</tr>
@@ -43,34 +43,31 @@
 							</td>	
 						</tr>
 						<tr>
-							<td valign = "top">
-								<img src="images/hiking.jpeg" alt="Mohan" width="280" height="230">
+							<td valign = "middle">
+								<p><strong>Skills</strong></p>
 							</td>
 							<td valign = "top">
-								<p style="text-align:justify;">
-								Hiking has been a huge help in managing my anxious thoughts and feelings. Forcing me to breathe, to disconnect, to feel my body and to stay present are all helpful for me to calm my mind and experience the therapy of mindfulness. I couldn’t be more grateful to live in Texas with many national parks in a drivable distance and unlimited trails and views. I love getting to share the trails I love with friends and family and watch them find their reasons for loving it. Some of the health benefits of hiking in national parks improves heart health, circulation and lower cholesterol, blood glucose, and blood pressure. Walking in nature reduces inflammation and boosts the immune system, which increase the overall health. My favorite trail is the Santa Elena trail in Big Bend National Park.
-
-								</p>
-							</td>
-						</tr>
-						<tr>
-							<td valign = "top">
-								<img src="images/cooking.jpeg" alt="Mohan" width="280" height="230">
-							</td>
-							<td valign = "top">
-								<p style="text-align:justify;">
-								I started cooking because I love to eat and it was the most affordable way to have good meals. I keep cooking now because I love being able to experiment with new ways of cooking new ingredients or new recipes. The process of smelling and tasting while I cook makes the whole thing enjoyable, and when other people take part in it, it makes it all the better. There are still certain tastes that I just can't get in a restaurant, like a recipe I grew up with, that still makes cooking an essential part of my life. My favorite items to cook are Indian dishes like Chicken Biriyani, Tandoori Chicken, etc.
-								</p>
+								<ul style="text-align:justify;">
+									<li>Python</li>
+									<li>C</li>
+									<li>C++</li>
+									<li>Java</li>
+									<li>JavaScript</li>
+									<li>PHP</li>
+								</ul>
 							</td>
 						</tr>
 						<tr>
-							<td valign = "top">
-								<img src="images/music.jpeg" alt="Mohan" width="280" height="230">
+							<td valign = "middle">
+								<p><strong>Tools</strong></p>
 							</td>
 							<td valign = "top">
-								<p style="text-align:justify;">
-								I love listening to songs because some express my thoughts, feelings, and emotions through strong lyrics and music. I also feel that music can express happiness, sadness, or even anxiety in any situation. Many days, I just listen to good songs and relax. In addition to providing relaxation therapy, songs also let me go back to some good times of my life and have a positive mindset in challenging times of life. My favorite songs are Tamil Songs composed by Illayaraja and AR Rahman.
-								</p>
+								<ul style="text-align:justify;">
+									<li>GitHub</li>
+									<li>VS Code</li>
+									<li>Oracle VM</li>
+									<li>MySQL Workbench</li>
+								</ul>
 							</td>
 						</tr>
 					</table>					
