--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <html>
 <head>
-<title>Dr. Mohan Portfolio</title>
+<!-- the title of your webpage -->
+<title>Yordanos Ayelework's Portfolio</title>
+<!-- the style section has to do with how the webpage looks
+	unlike the html, which is concerned with the content of the page -->
 <style>
 .label {
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 16px;
-	color: #FFFFFF;
+	color: #ffffff;
 }
 
 .tableBorder {
-	border: solid 1px #0066FF;
+	border: solid 1px blue;
 	margin-top: 20px;
 }
 
@@ -26,11 +29,11 @@
 		<table bgcolor="#F4F5F7"
 			width="100%" class="tableBorder">
 			<tr>
-				<td class = "label" bgcolor="#0066FF"><center><b>Yordanos's Portfolio</b></center><br/>
+				<td class = "label" bgcolor="blue"><center><b>Yordanos Ayelework's Portfolio</b></center><br/>
 				<a href = "index.html" class = "label"><b>Biography</b></a> &nbsp;&nbsp;
 				<a href = "education.html" class = "label"><b>Education</b></a> &nbsp;&nbsp;
 				<a href = "work.html" class = "label"><b>Work</b></a>&nbsp;&nbsp;
-				<a href = "hobbies.html" class = "label"><b>Hobbies</b></a>&nbsp;&nbsp;
+				<a href = "experience.html" class = "label"><b>Experience</b></a>&nbsp;&nbsp;
 				<a href = "contact.html" class = "label"><b>Contact</b></a>&nbsp;&nbsp;
 				</td>
 			</tr>
@@ -44,13 +47,13 @@
 						</tr>
 						<tr>
 							<td valign = "top">
-								<img src="images/pic.jpg" alt="Mohan" width="220">
+								<img src="images/pic.jpg" alt="Yordanos Ayelework" width="220">
 								<br/><br/>
 								<br/><br/>
 							</td>
 							<td valign = "top">
 								<p style="text-align:justify;">
-								Yordanos Ayelework is a senior student at McMurry University.</p>
+								Hi! My name is Yordanos Ayelework. I am currently a senior doing my Bachelor's of Science at McMurry University. I major in Computer Science and minor in Mathematics and Religion.</p>
 								<p style="text-align:justify;">
 								
 								<br/><br/>
