--- a/work.html
+++ b/work.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Yordanos Ayelework's Portfolio</title>
+<title>Yordanos Ayelework's Work</title>
 <style>
 .label {
 	font-family: Verdana, Arial, Helvetica, sans-serif;
@@ -9,7 +9,7 @@
 }
 
 .tableBorder {
-	border: solid 1px #0066FF;
+	border: solid 1px blue;
 	margin-top: 20px;
 }
 
@@ -26,11 +26,11 @@
 		<table bgcolor="#F4F5F7"
 			width="100%" class="tableBorder">
 			<tr>
-				<td class = "label" bgcolor="#0066FF"><center><b>Yordanos Ayelework's Portfolio</b></center><br/>
+				<td class = "label" bgcolor="blue"><center><b>Yordanos Ayelework's Portfolio</b></center><br/>
 				<a href = "index.html" class = "label"><b>Biography</b></a> &nbsp;&nbsp;
 				<a href = "education.html" class = "label"><b>Education</b></a> &nbsp;&nbsp;
 				<a href = "work.html" class = "label"><b>Work</b></a>&nbsp;&nbsp;
-				<a href = "hobbies.html" class = "label"><b>Hobbies</b></a>&nbsp;&nbsp;
+				<a href = "experience.html" class = "label"><b>Experience</b></a>&nbsp;&nbsp;
 				<a href = "contact.html" class = "label"><b>Contact</b></a>&nbsp;&nbsp;
 				</td>
 			</tr>
@@ -44,25 +44,21 @@
 						</tr>
 						<tr>
 							<td valign = "top">
-								<img src="images/mcm.jpeg" alt="Mohan" width="280" height="230">
+								<img src="images/s3c.png" alt="McMurry S3C" height="200">
 							</td>
 							<td valign = "top">
 								<p style="text-align:justify;">
 								McMurry S3C</p>
 								<p style="text-align:justify;">
-								Role: Programming Fundamentals SI and Mathematics Tutor
+								Roles: Mathematics and Computer Science Tutor
+								<br/>
+								&emsp;&emsp;&emsp;&nbsp;Supplemental Instructor for Programming Fundamentals
 								<br/>
 								Years: 2023 - current
 								</p>
 							</td>
 						</tr>
-						<tr>
-							<td valign = "top">
-								
-							</td>
-							<td valign = "top">														</td>
-						</tr>
-						<tr>
+												<tr>
 							<td valign = "top">
 								
 							</td>
