--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Dr. Mohan Portfolio</title>
+<title>Yordanos Ayelework's Contact</title>
 <style>
 .label {
 	font-family: Verdana, Arial, Helvetica, sans-serif;
@@ -9,7 +9,7 @@
 }
 
 .tableBorder {
-	border: solid 1px #0066FF;
+	border: solid 1px blue;
 	margin-top: 20px;
 }
 
@@ -26,11 +26,11 @@
 		<table bgcolor="#F4F5F7"
 			width="100%" class="tableBorder">
 			<tr>
-				<td class = "label" bgcolor="#0066FF"><center><b>Dr. Mohan's Portfolio</b></center><br/>
+				<td class = "label" bgcolor="blue"><center><b>Yordanos Ayelework's Portfolio</b></center><br/>
 				<a href = "index.html" class = "label"><b>Biography</b></a> &nbsp;&nbsp;
 				<a href = "education.html" class = "label"><b>Education</b></a> &nbsp;&nbsp;
 				<a href = "work.html" class = "label"><b>Work</b></a>&nbsp;&nbsp;
-				<a href = "hobbies.html" class = "label"><b>Hobbies</b></a>&nbsp;&nbsp;
+				<a href = "experience.html" class = "label"><b>Experience</b></a>&nbsp;&nbsp;
 				<a href = "contact.html" class = "label"><b>Contact</b></a>&nbsp;&nbsp;
 				</td>
 			</tr>
@@ -44,19 +44,13 @@
 						</tr>
 						<tr>
 							<td valign = "top">
-								<img src="images/phone.jpeg" alt="Mohan" width="280" height="230">
-							</td>
-							<td valign = "top">
 								<p style="text-align:justify;">
-								Email: mohan.aravind@mcm.edu
+								Email: ayelework.yordanos@mcm.edu
 								<br/>
-								Phone: (325) 793-3845
+								Phone: (301) 450-9050
 								<br/>
-								Website: https://amohan.mcm.edu/
+								Address: McMurry University, Abilene, TX 79606
 								<br/>
-								Address: Cooke Building, Room 206, McMurry University, Abilene, TX 79606
-								<br/>
-
 								</p>
 							</td>
 						</tr>
