--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,11 @@
 <html>
 <head>
+
+<!-- the title of your webpage -->
 <title>Yordanos Ayelework's Contact</title>
+
+<!-- the style section has to do with how the webpage looks
+	unlike the html, which is concerned with the content of the page -->
 <style>
 .label {
 	font-family: Verdana, Arial, Helvetica, sans-serif;
@@ -9,7 +14,7 @@
 }
 
 .tableBorder {
-	border: solid 1px blue;
+	border: solid 1px #102a71;
 	margin-top: 20px;
 }
 
@@ -26,7 +31,7 @@
 		<table bgcolor="#F4F5F7"
 			width="100%" class="tableBorder">
 			<tr>
-				<td class = "label" bgcolor="blue"><center><b>Yordanos Ayelework's Portfolio</b></center><br/>
+				<td class = "label" bgcolor="#102a71"><center><b>Yordanos Ayelework's Portfolio</b></center><br/>
 				<a href = "index.html" class = "label"><b>Biography</b></a> &nbsp;&nbsp;
 				<a href = "education.html" class = "label"><b>Education</b></a> &nbsp;&nbsp;
 				<a href = "work.html" class = "label"><b>Work</b></a>&nbsp;&nbsp;
@@ -45,13 +50,18 @@
 						<tr>
 							<td valign = "top">
 								<p style="text-align:justify;">
-								Email: ayelework.yordanos@mcm.edu
+								Email: <a href="mailto:ayelework.yordanos@mcm.edu" class="email"> ayelework.yordanos@mcm.edu </a>
 								<br/>
 								Phone: (301) 450-9050
 								<br/>
 								Address: McMurry University, Abilene, TX 79606
 								<br/>
 								</p>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<a href="documents/resume.pdf" target="_blank">Resume</a>
 							</td>
 						</tr>
 					</table>					
