--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 <head>
+
 <!-- the title of your webpage -->
 <title>Yordanos Ayelework's Portfolio</title>
+
 <!-- the style section has to do with how the webpage looks
 	unlike the html, which is concerned with the content of the page -->
 <style>
@@ -12,7 +14,7 @@
 }
 
 .tableBorder {
-	border: solid 1px blue;
+	border: solid 1px #102a71;
 	margin-top: 20px;
 }
 
@@ -29,7 +31,7 @@
 		<table bgcolor="#F4F5F7"
 			width="100%" class="tableBorder">
 			<tr>
-				<td class = "label" bgcolor="blue"><center><b>Yordanos Ayelework's Portfolio</b></center><br/>
+				<td class = "label" bgcolor="#102a71"><center><b>Yordanos Ayelework's Portfolio</b></center><br/>
 				<a href = "index.html" class = "label"><b>Biography</b></a> &nbsp;&nbsp;
 				<a href = "education.html" class = "label"><b>Education</b></a> &nbsp;&nbsp;
 				<a href = "work.html" class = "label"><b>Work</b></a>&nbsp;&nbsp;
@@ -47,25 +49,25 @@
 						</tr>
 						<tr>
 							<td valign = "top">
-								<img src="images/pic.jpg" alt="Yordanos Ayelework" width="220">
+								<img src="images/piC.jpg" alt="Yordanos Ayelework" width="250">
 								<br/><br/>
 								<br/><br/>
 							</td>
 							<td valign = "top">
 								<p style="text-align:justify;">
-								Hi! My name is Yordanos Ayelework. I am currently a senior doing my Bachelor's of Science at McMurry University. I major in Computer Science and minor in Mathematics and Religion.</p>
+								Hi! My name is Yordanos Ayelework. I am currently a senior doing my Bachelor's of Science at McMurry University. I major in Computer Science and minor in Mathematics and Religion. I work as a Math and Computer Science tutor, as well as the Supplemental Instructor for Programming Fundamentals. Additionally, I am the president for the WarHawk Coders Club.</p>
 								<p style="text-align:justify;">
-								
-								<br/><br/>
-								<br/><br/>
+								I'm interested in software engineering and web development. My interests include front-end and back-end development and working on collaborative projects to solve real world problems.
+							</p>
+							<p>
+								 Outside of Computer Science, my hobbies include books, art, music, and engaging in social gatherings. I love getting to know people and creating new meaningful connections.
 								</p>
 							</td>
 						</tr>
 					</table>					
 				</td>
 			</tr>
-		</table>
-			
+		</table>	
 	</form>
 </body>
 </html>
